# trip-pilot

./: .gitignore  LICENSE  README.md
backend/: .dockerignore  Dockerfile  README.md  manage.py  pyproject.toml
backend/common/: exceptions.py  models.py  repository.py
backend/common/migrations/: 0001_initial.py  0002_alter_location_options_alter_location_table_and_more.py  0003_add_location_type_stops_eld_logs.py
backend/config/: env_utils.py  settings.py  urls.py
backend/services/: eld_generator.py  hos_engine.py  places_service.py  polyline_utils.py  queue.py  route_generation.py  worker.py
backend/trips/: admin.py  apps.py  models.py  repository.py  serializers.py  tests.py  urls.py  views.py
backend/trips/migrations/: 0001_initial.py  0002_alter_trip_options_alter_trip_table.py  0003_trip_generate_stage.py  0004_alter_trip_generate_stage.py  0005_trip_curr_to_pickup_trip_pickup_to_drop.py  0006_trip_start_date.py  0007_add_location_type_stops_eld_logs.py  0008_trip_deleted.py
backend/user/: models.py  serializers.py  urls.py  views.py
backend/user/migrations/: 0001_initial.py
frontend/: index.html  package-lock.json  package.json  tsconfig.app.json
frontend/src/: App.tsx  index.css
frontend/src/app/: app.tsx
frontend/src/constants/: dashboard.ts  map-icons.tsx  routing.tsx
frontend/src/context/: auth-provider.tsx
frontend/src/lib/: cache.ts
frontend/src/network/: api-client.tsx  auth-api.ts  location-search.ts  trips-api.ts
frontend/src/pages/: auth-page.tsx  dashboard-page.tsx  page-placeholder.tsx  profile-page.tsx  trips-page.tsx  (+1 more)
(+20 files in other folders)
